# quadcopter-core

./: .gitignore  README.md  setup.sh
airsim_launcher/: CMakeLists.txt  README.md  package.xml
airsim_launcher/scripts/: launch  start
airsim_mavlink_interceptor/: CMakeLists.txt  README.md  package.xml  settings.json  setup.py
airsim_mavlink_interceptor/scripts/: actuate.py  altitude_lock.py  complementary_filter.py  gyro_angle.py  intercept  pitch_cntrl.py  talker.py
bash/: logging.sh
blackbox/: CMakeLists.txt  package.xml  setup.py
blackbox/scripts/: imu
docs/: Simulating flight controller.md
drone_commands/: CMakeLists.txt  package.xml
drone_commands/msg/: Movement.msg
drone_constants/: CMakeLists.txt  README.md  package.xml
drone_std_msgs/: CMakeLists.txt  README.md  package.xml
falcon/: CMakeLists.txt  package.xml
falcon/include/falcon/: pid.h  utils.h
falcon/include/falcon/control/: pid.h  velocity_control.h
falcon/include/falcon/math/: calculus.h  common.h  quaternion.h
falcon/include/falcon/state/: angular_velocity.h  attitude.h  filters.h  gravity.h  linear_acceleration.h  linear_velocity.h  manager.h  velocity.h
falcon/src/: benchmark_node.cpp  falcon_node.cpp
falcon/src/falcon/control/: velocity_control.cpp
falcon/src/falcon/state/: angular_velocity.cpp  attitude.cpp  gravity.cpp  linear_acceleration.cpp  linear_velocity.cpp  manager.cpp  velocity.cpp
flight_control/: CMakeLists.txt  package.xml  setup.py
rosdeps/: osx.yaml  python.yaml  setup.sh
webrc/: app.js  package-lock.json  package.json
(+28 files in other folders)
